<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>turtlesim_teleop</name>
	<version>0.1.0</version>
	<description>
		A simple teleoperation control of the turtlesim to practice ROS2 and some development features.
	</description>
	<maintainer email="23261132+kylerobots@users.noreply.github.com">kylerobots</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
